making the ball jump correctly

--- a/ballAnimation.css
+++ b/ballAnimation.css
@@ -22,79 +22,72 @@ body
     background-color: red;
     left: 50px;
     top: -300px;
-    animation: movement 3s linear infinite;
+    animation: movement 3s linear 1 forwards;
+}
+.shadow
+{
+    position: absolute;
+    top: -400px;
+    left: 200px;
+    height: 20px;
+    width: 100px;
+    background-color: black;
+    border-radius: 50%;
+    box-shadow: 0 0 10px black;
+    z-index: -1;
+}
+.shadow-2
+{
+    position: absolute;
+    top: -280px;
+    left: 350px;
+    height: 20px;
+    width: 100px;
+    background-color: black;
+    border-radius: 50%;
+    box-shadow: 0 0 10px black;
+    z-index: -1;
+}
+.shadow-3
+{
+    position: absolute;
+    top: -160px;
+    left: 500px;
+    height: 20px;
+    width: 100px;
+    background-color: black;
+    border-radius: 50%;
+    box-shadow: 0 0 10px black;
+    z-index: -1;
 }
 
-@keyframes movement 
-{
+@keyframes movement {
     0% {
         top: -300px;
         left: 50px;
-        transform: translateY(0);
+        transform: translateY(-250px) translateX(150px);
         animation-timing-function: ease-out; 
     }
     10% {
-        top: -200px;
+        top: -350px;
         animation-timing-function: ease-in;
-        transform: translateY(50px);
-        transform: translateX(30px);
+        transform: translateY(-100px) translateX(150px);
     }
-    20% {
-        top:-120px;
+    30% {
+        top: -350px;
         animation-timing-function: ease-in-out;
-        transform: translateY(50px);
-        transform: translateX(30px);
+        transform: translateY(30px) translateX(200px);
     }
-    40% {
-        top: 0px;
-        animation-timing-function: ease-in;
-        transform: translateY(50px);
-        transform: translateX(30px);
-    }
-    60% {
-        top: 100px;
-        animation-timing-function: ease-in;
-        transform: translateY(50px);
-    }
+    
     80% {
-        top: 200px;
-        animation-timing-function: ease-in;
-        transform: translateY(50px);
+        top: 10px;
+        animation-timing-function: ease-out;
+        transform: rotate(360deg) translateY(-200px) translateX(200px);
     }
-
     100% {
-        top: 150px;
-        left: 50%;
-        animation-timing-function: ease-out;
-        transform: rotate(360deg) translateX(-50%);
-    }
-    /*
-    16%, 48%, 78%
-    {
         top: 300px;
-        animation-timing-function: ease-out; 
-    }
-    32%
-    {
-        top: 50px;
-        animation-timing-function: ease-in;
-    }
-    62%
-    {
-        top: 150px;
-        animation-timing-function: ease-in;
-    }
-    90%
-    {
-        top: 200px;
-        animation-timing-function: ease-in;
-    }
-    100%
-    {
-        top: 270px;
-        left: 100%;
+        left: calc(50% - 100px);
         animation-timing-function: ease-out;
-        transform: rotate(360deg);
+        transform: rotate(360deg) translateY(-250px) translateX(300px);
     }
-    */
 }
